--- a/Aidhurt/app/src/main/AndroidManifest.xml
+++ b/Aidhurt/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
 
         <service
             android:name=".SensorService"
-            android:enabled="true"></service>
+            android:enabled="true" />
 
         <receiver
             android:name=".SensorRestarted"
@@ -43,7 +43,8 @@
             android:name=".Juego"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/title_activity_juego"
-            android:theme="@style/FullscreenTheme"></activity>
+            android:theme="@style/FullscreenTheme" />
+        <activity android:name=".Juego2"></activity>
     </application>
 
 </manifest>
