--- a/Aidhurt/app/build.gradle
+++ b/Aidhurt/app/build.gradle
@@ -27,5 +27,6 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.0'
     compile 'com.android.support:support-v4:23.4.0'
+    compile 'com.google.android.gms:play-services-location:8.1.0'
     testCompile 'junit:junit:4.12'
 }
