--- a/Aidhurt/app/src/main/AndroidManifest.xml
+++ b/Aidhurt/app/src/main/AndroidManifest.xml
@@ -45,6 +45,8 @@
             android:label="@string/title_activity_juego"
             android:theme="@style/FullscreenTheme" />
         <activity android:name=".Juego2"></activity>
+
+        <service android:name="com.taes.paula.aidhurt.Accelerometer"></service>
     </application>
 
 </manifest>
