--- a/Aidhurt/app/src/main/AndroidManifest.xml
+++ b/Aidhurt/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.taes.paula.aidhurt">
 
+    <uses-permission android:name="android.permission.PREVENT_POWER_KEY" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -45,6 +47,17 @@
             android:label="@string/title_activity_juego"
             android:theme="@style/FullscreenTheme" />
         <activity android:name=".Juego2"></activity>
+
+        <receiver
+            android:name=".WarningPower"
+            android:enabled="true"
+            android:exported="true"
+            android:label="CatchPOWER">
+            <intent-filter>
+                <action android:name="android.media.ACTION_SCREEN_ON" />
+                <action android:name="android.media.ACTION_SCREEN_OFF" />
+            </intent-filter>
+        </receiver>
     </application>
 
 </manifest>
