--- a/Aidhurt/app/build.gradle
+++ b/Aidhurt/app/build.gradle
@@ -1,4 +1,6 @@
+apply plugin: 'com.google.gms.google-services'
 apply plugin: 'com.android.application'
+
 
 android {
     //apply plugin: 'com.google.gms.google-services'
@@ -26,11 +28,11 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.google.firebase:firebase-core:9.2.0'
-    compile 'com.google.firebase:firebase-messaging:9.2.0'
     compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.0'
     compile 'com.android.support:support-v4:23.4.0'
+    compile 'com.google.firebase:firebase-core:9.2.0'
+    compile 'com.google.firebase:firebase-messaging:9.2.0'
     compile 'com.google.android.gms:play-services-location:9.2.0'
     compile 'com.google.android.gms:play-services-places:9.2.0'
 
