--- a/Aidhurt/app/src/main/AndroidManifest.xml
+++ b/Aidhurt/app/src/main/AndroidManifest.xml
@@ -26,6 +26,18 @@
             android:name=".SensorService"
             android:enabled="true" />
 
+        <service android:name=".MyFirebaseMessagingService">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT"/>
+            </intent-filter>
+        </service>
+
+        <service android:name=".FirebaseIDService">
+            <intent-filter>
+                <action android:name="com.google.firebase.INSTANCE_ID_EVENT"/>
+            </intent-filter>
+        </service>
+
         <receiver
             android:name=".SensorRestarted"
             android:enabled="true"
